# LVGLXMLwZephyr

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README.zh.md  west.yml
app/: CMakeLists.txt  debug.conf  prj.conf  sample.yaml
app/boards/: native_sim.overlay
app/src/: main.c
docs/: basic.md  basic.zh.md  examples.md  examples.zh.md  tutorials.md  tutorials.zh.md
scripts/: lvglxml.py  west-commands.yml
